# Chunky-Bits

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build-release.yml  compile.yml  formatting.yaml
examples/: git.yaml  local.yaml  test.yaml  weights.yaml  zones.yaml
python/: .gitignore  Pipfile  README.md  chunky-bits.py
src/: cluster.rs  error.rs  file.rs  http.rs  lib.rs  localfiles.rs  main.rs
src/cluster/: cluster.rs  destination.rs  metadata.rs  mod.rs  nodes.rs  profile.rs  sized_int.rs  tunables.rs  writer.rs
src/file/: chunk.rs  collection_destination.rs  error.rs  file_part.rs  file_reference.rs  location.rs  mod.rs  profiler.rs  reader.rs  weighted_location.rs  writer.rs
src/file/hash/: any.rs  hash.rs  mod.rs  sha256.rs
tests/: cluster.rs  file.rs  hash.rs  location.rs
