[package]
name = "chunky-bits"
version = "0.2.0"
authors = ["Miles Breslin <milesbreslin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Chunky Bits is simple, unmanaged, distributed HTTP object store tool."

[profile.release]
lto = true

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
hex = { version = "0.4", features = [ "std", "serde" ] }
lazy_static = "1.4"
rand = { version = "0.8", features = [ "serde", "small_rng" ] }
reed-solomon-erasure = { version = "4.0" }
reqwest = { version = "0.11", features = [ "default-tls", "stream", "gzip", "brotli" ] }
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = "1.0"
serde_yaml = "0.8"
sha2 = { version = "0.9" }
structopt = "0.3"
tokio = { version = "1", features = [ "fs", "io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "signal" ] }
tokio-util = "0.6"
tokio-stream = { version = "0.1", features = [ "fs" ] }
url = { version = "2.2", features = [ "serde" ] }
warp = { version = "0.3" }

[dev-dependencies]
tempfile = "3.2"
